# stratash

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  detail.rs  lib.rs  main.rs  manpage.rs  parser.rs  stats.rs
src/api/: tauri.ts
src/components/browser/: HistoryBrowser.tsx  HistoryRow.tsx  HistoryTable.tsx
src/components/charts/: ActivityHeatmap.tsx  NoTimestampState.tsx  TimelineChart.tsx
src/components/commands/: CommandList.tsx
src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/hooks/: useHistoryData.ts
src/types/: history.ts
src/views/: ActivityHeatmapView.tsx  CommandDetailView.tsx  HistoryBrowserView.tsx  TimelineView.tsx  TopCommandsView.tsx
