[package]
name = "histviz"
version = "0.1.0"
description = "Bash History Visualizer"
authors = []
license = ""
repository = ""
default-run = "histviz"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "histviz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "histviz"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
